<resources>
    <string name="app_name">MadLevel4Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_title">Welcome</string>
    <string name="instructions_text">Instructions: select rock, paper or scissors to play.</string>
    <string name="versus_text">VS.</string>
    <string name="computer_text">Computer</string>
    <string name="player_text">Player</string>
    <string name="delete">Delete</string>
    <string name="history">History</string>
</resources>